// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHorizontalBarSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="63.75"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="0"
            x="0"
            y="80.625"
          />
          <rect
            height="63.75"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="550"
            x="0"
            y="5.625"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="112.5"
            y2="112.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="75"
            y2="75"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="37.5"
            y2="37.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(55, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(110, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(165, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(220, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(275, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(385, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(440, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(495, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(550, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 112.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 75)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 37.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                15
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                20
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalBarSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2 euiSeriesChartContainer"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width: 100%; height: 100%;"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="63.75"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="0"
            x="0"
            y="80.625"
          />
          <rect
            height="63.75"
            style="opacity: 1; stroke: #00B3A4; fill: #00B3A4;"
            width="550"
            x="0"
            y="5.625"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="150"
            y2="150"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="112.5"
            y2="112.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="75"
            y2="75"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="37.5"
            y2="37.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(55, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(110, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(165, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(220, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(275, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(330, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(385, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(440, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(495, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(550, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 150)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 112.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 75)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 37.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                15
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                20
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalBarSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div
    class="euiSeriesChartContainer"
  >
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        style="width:100%;height:100%"
        width="600"
      >
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="25.5"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="0"
            x="137.5"
            y="72"
          />
          <rect
            height="25.5"
            style="opacity:1;stroke:#DB1374;fill:#DB1374"
            width="275"
            x="137.5"
            y="102"
          />
        </g>
        <g
          class="rv-xy-plot__series rv-xy-plot__series--bar euiBarSeries"
          transform="translate(40,10)"
        >
          <rect
            height="25.5"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="0"
            x="137.5"
            y="67.5"
          />
          <rect
            height="25.5"
            style="opacity:1;stroke:#3185FC;fill:#3185FC"
            width="275"
            x="137.5"
            y="22.5"
          />
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(40,10)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="142.5"
            y2="142.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="112.5"
            y2="112.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="82.5"
            y2="82.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="52.5"
            y2="52.5"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            x1="0"
            x2="550"
            y1="22.5"
            y2="22.5"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(40,160)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="550"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(137.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(412.5, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,10)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="40"
            x2="40"
            y1="0"
            y2="150"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(40, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 142.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 112.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 82.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 52.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 22.5)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
